--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,11 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
+   // implementation "androidx.compose.material3:material3-window-size-class"
+    //implementation "androidx.navigation:navigation-compose:2.4.0-alpha06"
+    implementation "androidx.compose.material:material-icons-extended:$compose_ui_version"
+// system bars customization
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.23.1"
 
 
     // paging 3
